# controllers/main.go
@@ -1,24 +1,11 @@
 package controllers
 
-import (
-	"github.com/gin-gonic/gin"
-	"github.com/wukongcloud/xxdns/models"
-)
+import "github.com/gin-gonic/gin"
 
 type errResponse struct {
 	Message string `json:"message"`
 	Code    int    `json:"code"`
 }
-
-type viewCreateForm struct {
-	Name     string `json:"name" binding:"required"`
-	Comment  string `json:"comment" binding:"required"`
-	Disabled bool   `json:"disabled"`
-}
-
-type viewObject models.View
-
-type viewList []models.View
 
 // response 响应数据
 func response(c *gin.Context, httpCode int, v interface{}) {
@@ -34,4 +21,18 @@ func responseError(c *gin.Context, httpCode int, errCode int, err string) {
 			Message: err,
 		},
 	)
+}
+
+type viewCreateForm struct {
+	Name     string `json:"name" binding:"required"`
+	Comment  string `json:"comment"`
+	Disabled bool   `json:"disabled"`
+}
+
+
+type aclCreateForm struct {
+	Name     string `json:"name" binding:"required"`
+	Path     string `json:"path" binding:"required"`
+	Comment  string `json:"comment"`
+	Disabled bool   `json:"disabled"`
 }
